# qacontract

./: .env.example  .gitignore  README.md  ape-config.yaml  pyproject.toml
.github/workflows/: deploy.yml
contracts/: KingOfTheHillGiveaway.vy  KingOfTheHillGiveawayV51.vy  KingOfTheHillGiveawayV52.vy  MockERC20.vy  PromptClaim.vy  PuzzleGiveaway.vy  PuzzleGiveawayV3.vy
deprecated/contracts/: KingOfTheHillGiveawayV5.vy  PuzzleGiveaway.vy
deprecated/scripts/: deploy_and_fund_puzzle_giveaway_v3.py  deploy_prompt_claim.py  fund_prompt_claim.py
deprecated/tests/: test_prompt_claim.py  test_puzzle_giveaway_v3.py
diagrams/: king_of_the_hill_chart.py
scripts/: cloudflare_worker.js  deploy_and_fund_king_of_the_hill.py  deploy_and_fund_puzzle_giveaway.py  deploy_prompt_claim.py  fund_prompt_claim.py  hash_answer.py  serve_site.py  simulate_king_of_the_hill_gameplay.py  start_king_of_the_hill.py  start_puzzle_giveaway.py  start_puzzle_giveaway_v3.py  update_worker.py  wrangler.toml.example
site/: abi.json  app.js  demo.html  index.html  styles.css
tests/: test_fund_prompt_claim_script.py  test_king_of_the_hill_giveaway.py  test_king_of_the_hill_scripts.py  test_prompt_claim.py  test_puzzle_giveaway.py  test_puzzle_giveaway_scripts.py  test_puzzle_giveaway_v3_scripts.py  test_scripts.py
