[project]
name = "qacontract"
version = "0.1.0"
description = "Onchain ERC20 giveaway game contracts"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ape-vyper>=0.8.0",
    "eth-ape>=0.8.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
norecursedirs = ["deprecated"]
